--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ env:
   matrix:
     - TEST_SDK=iphonesimulator14.4 OS=14.4 NAME='iPhone 11'
 
+    - CODECOV_TOKEN='a1a5bdc6-81fd-429c-995d-658ed8238371'
+
 script:
   - set -o pipefail && xcodebuild test -enableCodeCoverage YES -project FrameworkPods.xcodeproj -scheme FrameworkPods -sdk $TEST_SDK -destination "platform=iOS Simulator,OS=$OS,name=$NAME" ONLY_ACTIVE_ARCH=YES
 after_success:
