--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ script:
   - set -o pipefail && xcodebuild test -enableCodeCoverage YES -project FrameworkPods.xcodeproj -scheme FrameworkPods -sdk $TEST_SDK -destination "platform=iOS Simulator,OS=$OS,name=$NAME" ONLY_ACTIVE_ARCH=YES
 after_success:
   - slather
-  - bash <(curl -s https://codecov.io/bash) -f reports/cobertura.xml -X coveragepy -X gcov -X xcode
+  - bash <(curl -s https://codecov.io/bash) -t {CODECOV_TOKEN}
