--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ script:
 after_success:
   - slather
   - bash <(curl -s https://codecov.io/bash) -t {CODECOV_TOKEN}
+  - bash <(curl -s https://codecov.io/bash) -f reports/cobertura.xml -X coveragepy -X gcov -X xcode
