--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 script:
   - set -o pipefail && xcodebuild test -enableCodeCoverage YES -project FrameworkPods.xcodeproj -scheme FrameworkPods -sdk $TEST_SDK -destination "platform=iOS Simulator,OS=$OS,name=$NAME" ONLY_ACTIVE_ARCH=YES
 before_install: rvm use $RVM_RUBY_VERSION
-install: bundle install --without=documentation --path ../travis_bundle_dir
+install: bundle config set --local path '../travis_bundle_dir'
 after_success:
   - slather
   - bash <(curl -s https://codecov.io/bash) -f path/to/xml_report/cobertura.xml -X coveragepy -X gcov -X xcode
